--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="main">
       <h1>
-        Jabont Chamikorn 😎
+        gewgew😎
       </h1>
       <p>
         Welcome to my site
