--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </p>
       <p class="social">
 
-        <a href="" class="">
+        <a href="https://www.instagram.com/ttnppe/" class="">
           <i class="fab fa-instagram">
           </i>
         </a>
