--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </i>
         </a>
 
-        <a href="mailto:jabont@hotmail.com" class="">
+        <a href="" class="">
           <i class="fab fa-email">
           </i>
         </a>
